# cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
mdlm/: __init__.py  __main__.py  api.py  cli.py  config.py  manifest.py
